Junit error in Suggester Controller Test
Signed-off-by: Gino Augustine <ginoaugustine@gmail.com>